# Its own workspace root: keep this crate out of any parent Cargo workspace
# (the server is standalone; this stays independent too).
[workspace]

[package]
name = "kroma-desktop"
version = "0.1.3"
description = "KROMA Steam Deck client (Tauri shell over @kroma/tv, native mpv playback)"
edition = "2021"
# Tauri v2's dependency graph (darling / time / serde_with) needs >= 1.88.
rust-version = "1.88"

[build-dependencies]
tauri-build = { version = "2", features = [] }
# Compiles the Obj-C shim (vlc_shim.m) for the macOS libVLC engine.
cc = "1"

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
# Self-update from GitHub Releases (signed with the updater key; see tauri.conf.json
# plugins.updater). `process` provides relaunch after an update is installed.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# In-process libmpv is the chosen native engine on EVERY desktop OS, ON by default:
# it embeds into a native view (NSView on macOS via a GL render shim; HWND / X11 XID
# via `--wid`) and decodes everything the webview can't (HEVC/AV1 + surround). A build
# with it needs libmpv at LINK time and a BUNDLED libmpv in the installer at run time:
#   - macOS:   `brew install mpv` to build; CI dylibbundler-embeds libmpv + its ffmpeg
#              dylibs into KROMA.app (see scripts/bundle-libmpv-macos.sh).
#   - Windows: the self-contained mpv-2.dll (ffmpeg statically linked in) fetched by
#              scripts/fetch-libmpv-windows.ps1, shipped next to the .exe.
#   - Linux:   libmpv.so.2 (apt `libmpv-dev` to build); the AppImage/.deb bundle it.
#              libmpv is the PRIMARY engine but the mpv BINARY (mpv.rs) stays as an
#              automatic fallback when the in-process GPU context can't initialise
#              (the Deck's fragile EGL/Wayland stack) - so the sidecar is still bundled.
# Disable for a lean webview-only build (`--no-default-features`): the in-page <video>
# path then handles playback (no libmpv link/bundle needed).
default = ["libmpv"]
libmpv = ["dep:libmpv2"]

[profile.release]
# Lean binary for the AppImage: LTO + strip, small over fast (a media shell is
# I/O-bound, not CPU-bound - the decode work is mpv's, in a separate process).
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[target.'cfg(target_os = "macos")'.dependencies]
libmpv2 = { version = "6.0.0", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
# In-process libmpv on Windows, embedded into the window's HWND via `--wid`
# (mpv's built-in d3d11/gpu VO renders into it; no Obj-C/GL shim needed, unlike
# macOS). Decodes what WebView2 can't (HEVC without the extension, AV1, MKV,
# surround audio). Off by default (the `libmpv` feature); a build with it needs
# `libmpv` (mpv-2.dll + import lib) at link time, like macOS needs `brew mpv`.
libmpv2 = { version = "6.0.0", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
# In-process libmpv on Linux, embedded into the GTK window's X11 XID via `--wid`
# (mpv's gpu VO renders a child surface behind the transparent webview, like the
# Windows HWND path). The PRIMARY engine; if its GPU context fails to initialise
# (the Deck's EGL/Wayland stack), libmpv_linux::init returns false and the shell
# falls back to the mpv BINARY over IPC (mpv.rs, VO fallback ladder + process
# isolation). Off with `--no-default-features`. Needs `libmpv-dev` at link time.
libmpv2 = { version = "6.0.0", optional = true }
# Extract the app window's X11 XID for libmpv's `--wid` (0.6 = Tauri v2's version,
# so `WebviewWindow::window_handle()` returns a matching RawWindowHandle). Only used
# in a libmpv build; harmless otherwise.
raw-window-handle = "0.6"
# Process-group kill of the mpv sidecar tree (the AppImage runtime execs the real
# mpv as a grandchild, so Child::kill alone orphans the player).
libc = "0.2"
