[package]
name = "kroma-domain"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "KROMA core entities + pure rules (serde types, zero I/O). The former src/domain layer."
license.workspace = true

# Purity is now enforced by the compiler, not a CI grep: this crate depends only
# on serde, so an accidental `use axum::` / `use rusqlite::` won't resolve.
[dependencies]
serde = { workspace = true }
