[package]
name = "kroma-engine"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "KROMA business logic: infra adapters + services + app state (everything the HTTP layer drives)"
license.workspace = true

[dependencies]
# Lower layers (aliased inside lib.rs as crate::{db,config,domain}).
kroma-domain = { workspace = true }
kroma-db = { workspace = true }
kroma-config = { workspace = true }
kroma-primitives = { workspace = true }
kroma-i18n = { workspace = true }
# Module registry contract + the module descriptors from the leaf crates.
kroma-module-manifest = { workspace = true }
kroma-module-host = { workspace = true }
kroma-http = { workspace = true }
# The heavy/optional adapters (embeddings, whisper transcription, mDNS) are no
# longer named here: the engine consumes them through the port traits in
# `crate::ports`, and the binary (composition root) wraps the concrete module
# crates into those ports and injects them. kroma-engine names ZERO module crates.

axum = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
time = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
walkdir = { workspace = true }
jwalk = { workspace = true }
chacha20poly1305 = { workspace = true }
zip = { workspace = true }
notify = { workspace = true }
sysinfo = { workspace = true }
tantivy = { workspace = true }
rusty-chromaprint = { workspace = true }
