[package]
name = "kroma-i18n"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Server-side i18n: a faithful Rust port of @kroma/core's i18n (shared catalogs, plurals, fallback)"
license.workspace = true

[dependencies]
# The shared JSON catalogs are `include_str!`'d at compile time and parsed once,
# lazily, on first use. serde_json is the only dependency.
serde_json = { workspace = true }
