[package]
name = "kroma-module-host"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "The host seam: the narrow HostCtx contract + shared HTTP extractors a module crate's backend needs, without depending on the whole app (kroma-engine)."
license.workspace = true

[dependencies]
kroma-domain = { workspace = true }
kroma-db = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
