[package]
name = "kroma-module-macros"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Proc-macros for KROMA modules: embedded_module!() discovers a module's module.json + icon at compile time so the MODULE const is one line."
license.workspace = true

[lib]
proc-macro = true

[dependencies]
