[package]
name = "kroma-module-sdk"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "The KROMA module SDK: the single crate every server module depends on. Re-exports the manifest layer plus the engine/host/domain/http/db surface, so modules never depend on core crates directly."
license.workspace = true

[dependencies]
# Manifest layer (below engine): EmbeddedModule / Registry / ModuleManifest.
kroma-module-manifest = { workspace = true }
# The embedded_module!() proc-macro, re-exported so modules write one line.
kroma-module-macros = { workspace = true }
# Host contract: ServerModule, HostCtx, service/port resolution, async_trait.
kroma-module-host = { workspace = true }
# The application surface modules build against.
kroma-engine = { workspace = true }
kroma-domain = { workspace = true }
kroma-http = { workspace = true }
kroma-db = { workspace = true }
kroma-primitives = { workspace = true }
# The port contract types derive serde and return anyhow::Result.
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
# Pure capability-provider modules the facade re-exports (they sit below it, on
# the manifest layer) so consumer modules reach them via kroma_module_sdk::<name>
# instead of a direct cross-module dependency.
kroma-scene = { workspace = true }
