[package]
name = "kroma-primitives"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Shared low-level primitives: timestamps, short hashes, random tokens"
license.workspace = true

[dependencies]
time = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
