[package]
name = "luma-downloads"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "LUMA Downloads module (backend): the DownloadManager (engine lifecycle, grabs ledger, kill-switch) + resident monitor, over the HostCtx seam - no dependency on the app."
license.workspace = true

[dependencies]
# The download-engine SDK (DownloadClient trait + registry + rqbit) + the native
# indexer (private-tracker .torrent fetch via its cached session).
luma-torrent = { workspace = true }
luma-indexer = { workspace = true }
# The host seam + the lower data layers.
luma-module-host = { workspace = true }
luma-db = { workspace = true }
luma-domain = { workspace = true }
luma-primitives = { workspace = true }
luma-http = { workspace = true }

anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
