[package]
name = "luma-engine"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "LUMA business logic: infra adapters + services + app state (everything the HTTP layer drives)"
license.workspace = true

[dependencies]
# Lower layers (aliased inside lib.rs as crate::{db,config,domain}).
luma-domain = { workspace = true }
luma-db = { workspace = true }
luma-config = { workspace = true }
luma-primitives = { workspace = true }
luma-i18n = { workspace = true }
# Module registry contract + the module descriptors from the leaf crates.
luma-module-manifest = { workspace = true }
luma-module-host = { workspace = true }
luma-module-wasm = { workspace = true }
luma-http = { workspace = true }
# The heavy/optional adapters (embeddings, whisper transcription, mDNS) are no
# longer named here: the engine consumes them through the port traits in
# `crate::ports`, and the binary (composition root) wraps the concrete module
# crates into those ports and injects them. luma-engine names ZERO module crates.

axum = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
time = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
walkdir = { workspace = true }
jwalk = { workspace = true }
chacha20poly1305 = { workspace = true }
zip = { workspace = true }
notify = { workspace = true }
sysinfo = { workspace = true }
tantivy = { workspace = true }
rusty-chromaprint = { workspace = true }
