[package]
name = "luma-module-kernel"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "The server-side module kernel: the compile-time composition root that registers every module's manifest, collects their ServerModule behaviors, and drives the generic enable/disable + admin-mount lifecycle."
license.workspace = true

[dependencies]
# The app state + per-module enabled/config settings the kernel reads.
luma-engine = { workspace = true }
# The host seam: ServerModule / HostCtx contracts the kernel drives generically.
luma-module-host = { workspace = true }
# Module manifest primitives (Registry, EmbeddedModule, ModuleManifest).
luma-module-manifest = { workspace = true }
# Generated aggregator: owns the whole compile-time roster (every module's
# manifest + the backend behaviors), built from modules/roster.yaml. The kernel
# names no individual module, so it needs none of them as a direct dependency.
luma-modules-generated = { workspace = true }
# The supervisor (resolved as a host service) so the listing endpoints include
# runtime-installed `.lmod` modules alongside the compile-time roster.
luma-module-supervisor = { workspace = true }

axum = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
