[package]
name = "luma-module-sdk"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Runtime-module contract: the Module trait, manifest, registry and event envelope shared by LUMA server modules"
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
# Semver range checks for versioned module dependencies (dependsOn version reqs).
semver = "1"
