[package]
name = "luma-module-wasm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Runtime-load tier: loads a WebAssembly module via extism and adapts it to the luma-module-manifest Module contract, so a wasm plugin registers into the same Registry as compiled-in modules"
license.workspace = true

[dependencies]
luma-module-manifest = { workspace = true }
# extism host SDK (wasmtime under the hood, pure Rust, ships musl targets). This
# is the only mechanism that hot-loads on the fully-static musl build, which
# cannot dlopen.
extism = "1"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
# Unpacking uploaded module bundles (a tar of module.json + module.wasm + fe/,
# raw `.tar` or gzip-compressed `.lmod`). `rust_backend` (miniz_oxide) keeps the
# fully-static musl build C-dependency-free.
tar = "0.4"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
tracing = { workspace = true }
