# The Hello WASM demo module's backend guest. Compiled to wasm32-unknown-unknown
# and loaded at runtime via extism. NOT a member of the server workspace -- it is
# its own root (empty [workspace]) so it builds independently. Build via
# `bun run modules:wasm`.
[package]
name = "luma-module-hello-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true

[workspace]
