[package]
name = "luma-acquisition"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "The acquisition vertical: interactive/manual search, release scoring, grab + import, and the automatic wanted-list pass. Rides on the Downloads module's engine."
license.workspace = true

[dependencies]
# The Downloads module owns the engine + queue + organize; acquisition depends on
# it (DownloadManager, GrabSpec, the db facade, the naming templates) but NEVER the
# reverse, so there is no cycle. It resolves the DownloadManager through the host
# service registry, exactly like the download admin routes do.
luma-torrent = { path = "../../dev.luma.torrents/server" }
luma-scene = { workspace = true }
luma-torznab = { workspace = true }
luma-indexer = { workspace = true }
luma-engine = { workspace = true }
luma-module-host = { workspace = true }
luma-module-sdk = { workspace = true }
luma-domain = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
# The importer walks a completed download's folder for video files.
walkdir = { workspace = true }
