[package]
name = "luma-acquisition"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "The acquisition vertical: interactive/manual search, release scoring, grab + import, and the automatic wanted-list pass. Rides on the Downloads module's engine."
license.workspace = true

[dependencies]
# SDK-only: acquisition reaches the Downloads / Indexer / Torznab modules purely
# through the SDK ports (DownloadGrabPort, DownloadDbPort, IndexerSearchPort, ...),
# resolved at runtime through the host registry, so it names no sibling crate.
luma-module-sdk = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
# The importer walks a completed download's folder for video files.
walkdir = { workspace = true }
