[package]
name = "luma-transmission"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "LUMA Transmission download sub-engine: a DownloadClient over the Transmission RPC. Plugs into the luma-torrent registry."
license.workspace = true

[dependencies]
luma-torrent = { workspace = true }
luma-module-host = { workspace = true }
luma-module-sdk = { workspace = true }
luma-http = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
