[package]
name = "luma-mdns"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "mDNS / DNS-SD advertising so LAN clients can auto-discover the server"
license.workspace = true

[dependencies]
serde_json = { workspace = true }
luma-module-sdk = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
mdns-sd = { workspace = true }
